--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -39,12 +39,12 @@
         <div>
             <div class="cursor-pointer min-[931px]:hidden">
                 <i class="bi bi-arrow-left-square text-gray-400 font-bold" style="font-size: 30px;"
-                    onclick="window.location.href = 'https://fcu-course-search.repl.co/'"></i>
+                    onclick="window.location.href = 'https://fcu-course-search.zeabur.app/'"></i>
             </div>
             <div class="flex font-bold text-4xl text-gray-600">
                 <div class="cursor-pointer max-[930px]:hidden">
                     <i class="bi bi-arrow-left-square text-gray-400 font-bold pr-2" style="font-size: 30px;"
-                        onclick="window.location.href = 'https://fcu-course-search.repl.co/'"></i>
+                        onclick="window.location.href = 'https://fcu-course-search.zeabur.app/'"></i>
                 </div>
                 General Studies
             </div>
